# claude-extend

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  tools.json.example
.github/workflows/: ci.yml
src/claude_extend/: __init__.py  main.py  tools.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_tools.py  test_utils.py
tests/integration/: test_cli_integration.py
tests/unit/: test_cli_commands.py  test_tools.py  test_utils.py
