[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-extend"
version = "0.1.0"
description = "A CLI tool for managing MCP server connections with Claude Code"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Craig" }
]

[project.urls]
Homepage = "https://github.com/cearley/claude-extend"
Repository = "https://github.com/cearley/claude-extend"
Issues = "https://github.com/cearley/claude-extend/issues"

[project.scripts]
cx = "claude_extend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_extend"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]